2004-10-11 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: More improvement in 'IF' statement

2004-10-11 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: If statement is enabled to parse
		following type of statement
		If <condition> Then <statement> else <statement>

2004/10/08 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* typemanager.cs: Changing StandardModule to use less memory, by doing string 
		concatenation only once. It was wasting 1 MB on the test case.

2004-10-06 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Added support for Call keyword in invocation statement

2004-10-01 Anirban Bhattacharjee <banirban@novell.com>
	* ecore.cs: Bug fixing - when event raised from other assembly

2004-09-30 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay:
	* statement.cs:
		Removed unused event_target field from
		AddHandler and RemoveHandler

2004-09-30 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: RemoveHandler function made cleaner

2004-09-30 Anirban Bhattacharjee <banirban@novell.com>
	* expression.cs:
	* ecore.cs:
		Fix for resolution of event expression 
		when we have a AddHandler statement 
		like 
		AddHandler Me.E, AddressOf Me.EH
		Submitted by Raja Harinath<rharinath@novell.com>

2004-09-30 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Unnecessary to and fro conversion of types
			is removed from AddHandler function

2004-09-23 Anirban Bhattacharjee <banirban@novell.com>
	* expression.cs: Enhanced mbas to resolve Default property or indexer

2004-09-21 Anirban Bhattacharjee <banirban@novell.com>
	* mb-parser.jay: Fixed bug #66231 -
	 Now, Me.SubName, MyBase.SubName or any other qualified name 
	 is supported by AddressOf operator

2004-09-15 Anirban Bhattacharjee <banirban@novell.com>
	* enum.cs: Made Enum member lookup case insensitive

2004-09-15 Anirban Bhattacharjee <banirban@novell.com>