@@ -8,22 +8,22 @@
 '  </autogenerated>
 ' ------------------------------------------------------------------------------
 
-Namespace ASP
-    Imports System
-    Imports System.Collections
-    Imports System.Collections.Specialized
-    Imports System.Configuration
-    Imports System.Text
-    Imports System.Text.RegularExpressions
-    Imports System.Web
-    Imports System.Web.Caching
-    Imports System.Web.Security
-    Imports System.Web.SessionState
-    Imports System.Web.UI
-    Imports System.Web.UI.WebControls
-    Imports System.Web.UI.HtmlControls
-    Imports System.IO
+Imports System
+Imports System.Collections
+Imports System.Collections.Specialized
+Imports System.Configuration
+Imports System.Text
+Imports System.Text.RegularExpressions
+Imports System.Web
+Imports System.Web.Caching
+Imports System.Web.Security
+Imports System.Web.SessionState
+Imports System.Web.UI
+Imports System.Web.UI.WebControls
+Imports System.Web.UI.HtmlControls
+Imports System.IO
 
+Namespace ASP
     Public Class vb_aspx
         Inherits System.Web.UI.Page
         Implements System.Web.SessionState.IRequiresSessionState
@@ -40,25 +40,25 @@ Namespace ASP
             End If
         End Sub
 
-        Protected Overrides Property AutoHandlers As Integer
+        Protected readonly Property AutoHandlers As Integer
             Get
                 Return ASP.vb_aspx.__autoHandlers
             End Get
         End Property
 
-        Protected NotOverridable Property ApplicationInstance As System.Web.HttpApplication
+        Protected readonly Property ApplicationInstance As System.Web.HttpApplication
             Get
                 Return CType(Me.Context.ApplicationInstance, System.Web.HttpApplication)
             End Get
         End Property
 
-        Public Overrides Property TemplateSourceDirectory As String
+        Public readonly Overrides Property TemplateSourceDirectory As String
             Get
                 Return "/"
             End Get
         End Property
 
-        Private NotOverridable Sub __RenderTree(htmlOutput As System.Web.UI.HtmlTextWriter, parameterContainer As System.Web.UI.Control)
+        Private Sub __RenderTree(htmlOutput As System.Web.UI.HtmlTextWriter, parameterContainer As System.Web.UI.Control)
             htmlOutput.Write("<html><head><title>Welcome to Mono XSP!</title></head>")
             htmlOutput.Write("<body><h1>Welcome to Mono XSP!</h1><a href=""http://www.go-mono.com""><img src=""mono.png"" alt=""http://www.go-mono.com""></a>")
             parameterContainer.Controls.Item(0).RenderControl(htmlOutput)
@@ -67,14 +67,14 @@ Namespace ASP
             htmlOutput.Write("</small></html>")
         End Sub
 
-        Private NotOverridable Sub __BuildControlTree(__ctrl As System.Web.UI.Control)
+        Private Sub __BuildControlTree(__ctrl As System.Web.UI.Control)
             Me.__BuildControl_FileList()
             Dim __parser As System.Web.UI.IParserAccessor = CType(__ctrl, System.Web.UI.IParserAccessor)
             __parser.AddParsedSubObject(Me.FileList)
             __ctrl.SetRenderMethodDelegate(New System.Web.UI.RenderMethod(Me.__RenderTree))
         End Sub
 
-        Private NotOverridable Function __BuildControl_FileList() As System.Web.UI.Control
+        Private Function __BuildControl_FileList() As System.Web.UI.Control
             Dim __ctrl As System.Web.UI.WebControls.Label
             __ctrl = New System.Web.UI.WebControls.Label()
             Me.FileList = __ctrl
